small bugfix regarding resizing of viewport size on mobile when keyboard is active

--- a/src/pages/homepage/Homepage.scss
+++ b/src/pages/homepage/Homepage.scss
@@ -15,7 +15,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 15vh;
+    justify-content: space-evenly;
   }
 }
 
